<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Michael Usry</string>
    <string name="hello_world">Full Sail Students</string>
    <string name="action_settings">Settings</string>
    <string name="gpa_4">4.0</string>
    <string name="gpa_3">3.0</string>
    <string name="gpa_2">2.0</string>
    <string name="gpa_1">1.0</string>
    <string name="gpa_f">0.0</string>
    <string name="a_student">You are a great student!</string>
    <string name="no_student">We would like for you to join us!</string>
    <string name="failing_student">I hate it, but your not passing.</string>
    <string name="btn_send">Send</string>
    <string name="student_name">Student Name</string>
    <string name="test_avg">Test Average</string>
    <string name="are_you_student">Student ?(Y/N)</string>
    <string name="student_information">Your student info</string>
    
    
    
</resources>
