<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="com.michaelusry.javai.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hello_world"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/student_name" />

        <EditText
            android:id="@+id/are_you_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/are_you_student" />

        <EditText
            android:id="@+id/test_avg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/test_avg" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_send" />

        <TextView
            android:id="@+id/si"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/student_information" />
    </LinearLayout>

</FrameLayout>
